<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="reminderDataItem"
            type="com.udacity.locationreminder.locationreminders.reminderslist.ReminderDataItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/reminderDescriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_large"
        tools:context=".locationreminders.ReminderDescriptionActivity">

        <TextView
            android:id="@+id/reminderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_large"
            android:paddingBottom="@dimen/padding_large"
            android:text="@={reminderDataItem.title}"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/reminderDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Example title" />

        <TextView
            android:id="@+id/reminderDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_large"
            android:text="@{reminderDataItem.description}"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/reminderLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reminderTitle"
            tools:text="Example description" />

        <TextView
            android:id="@+id/reminderLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_large"
            android:text="@{reminderDataItem.location}"
            app:layout_constraintBottom_toTopOf="@+id/reminderLatLng"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reminderDescription"
            tools:text="User defined location" />

        <TextView
            android:id="@+id/reminderLatLng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:latLng="@{reminderDataItem}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reminderLocation"
            tools:text="Lat: 48.13743, Long: 11.57549" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
